--- a/index.html
+++ b/index.html
@@ -28,17 +28,7 @@ font-family: 'Kalpurush', Arial, sans-serif !important;
 </head>
 <body>
 
-<a href="https://dailyexamchallange.blogspot.com/search/label/current%20affairs" style="margin-top: none; text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">কারেন্ট অ্যাফেয়ার্স</button></a>
-
-<a href="https://kumar360.in/" style="text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">সব বিষয় মকটেস্ট</button></a>
-
-<a href="https://dailyexamchallange.blogspot.com/search/label/pdf" style="text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">সাজেশন ডাউনলোড করুন</button></a>
-
-<a href="https://jobnewsbkp.blogspot.com/search/label/admit" style="text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">পরীক্ষার এডমিট কার্ড</button></a>
-
-<a href="https://jobnewsbkp.blogspot.com/search/label/result" style="text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">পরীক্ষার ফলাফল</button></a>
-
-<a href="https://jobnewsbkp.blogspot.com/search/label/Syllabus" style="text-decoration: none;"> <button class="btn btn-success btn-lg center-block arup">পরীক্ষার সিলেবাস</button></a>
+  <p>Coming Soon</p>
 
 <br />
 <br />
